Added the texts to the String.xml file Fixed the layout to adoubt to landspace

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="safety">safety</string>
     <string name="reset">reset</string>
 
+    <!-- String for the image discription -->
+    <string name="imageDiscription">Football image</string>
+
 </resources>
